# LineCounter

./: .gitignore  .gitmodules  CMakeLists.txt  File.h  LineCounter.h  Main.cpp  README.md
exampleConfigFiles/: exampleExtensions.txt  examplePathsToIgnore.txt
include/: File.h  LineCounter.h
src/: CMakeLists.txt  File.cpp  LineCounter.cpp  Main.cpp
src/line-counter/: CMakeLists.txt
src/line-counter/Include/: ConfigFilePaths.h  DefaultExtensionsReader.h  DefaultFilePathsSelector.h  DefaultPathsToIgnoreReader.h  ExtensionsReader.h  FileExtensions.h  FilePaths.h  FilePathsFinder.h  FilePathsSelector.h  LineCounter.h  LineCounterApplication.h  Paths.h  PathsToIgnore.h  PathsToIgnoreReader.h  RecursiveFilePathsFinder.h
src/line-counter/Source/: DefaultExtensionsReader.cpp  DefaultFilePathsSelector.cpp  DefaultPathsToIgnoreReader.cpp  LineCounter.cpp  LineCounterApplication.cpp  Main.cpp  RecursiveFilePathsFinder.cpp
src/line-counter/UT/Doubles/: ExtensionsReaderMock.h  FilePathsFinderMock.h  FilePathsSelectorMock.h  PathsToIgnoreReaderMock.h
src/line-counter/UT/Source/: DefaultExtensionsReaderTest.cpp  DefaultFilePathsSelectorTest.cpp  DefaultPathsToIgnoreReaderTest.cpp  LineCounterTest.cpp  RecursiveFilePathsFinderTest.cpp
src/utils/: CMakeLists.txt
src/utils/src/: DefaultFileAccess.cpp  DefaultFileAccessTest.cpp  FilenamePathFilter.h  FilenamePathFilterTest.cpp  GetProjectPathTest.cpp  ProjectFileAccessTest.cpp
